r6xx/r7xx: add support for tiling with kms (v3)

Requires radeon drm 2.6.0 and updated mesa.

v2: - fix lockup due to not emiting DB_DEPTH_INFO
https://bugs.freedesktop.org/show_bug.cgi?id=28342
    - fix drm minor version to deal with evergreen accel
v3: rebase on current ddx git

Signed-off-by: Alex Deucher <alexdeucher@gmail.com>